Fixed Section "Ontology learning".

--- a/thesis/ontology_learning.ltx
+++ b/thesis/ontology_learning.ltx
@@ -47,7 +47,7 @@ of cycles, redundancies, errors and unlinked classes. This tool is an ontology l
 A subgroup of algorithms for OL is concerned with learning taxonomic relations.
 The following approaches, categorized by \fullcite{Cimiano2009}, use text as input.
 
-\textbf{Lexico-syntactic patterns} are word patterns in patterns, which are used to identify hypernym-hyponym pairs (superclass-subclass pairs) in natural text.
+\textbf{Lexico-syntactic patterns} are word patterns, which are used to identify hypernym-hyponym pairs (superclass-subclass pairs) in natural text.
 For example, such a pattern is 
 \begin{align*}
 \mathit{NP}_{\mathit{hyper}} \: \textnormal{such as} \: \{  \mathit{NP}_\mathit{hypo} , \}^*  \:  \{ ( \textnormal{and} \mid  \textnormal{or} ) \} \: \mathit{NP}_\mathit{hypo}
