Fixed size and positioning of plots in Chapter "taxonomy analysis"

--- a/thesis/taxonomy_analysis.ltx
+++ b/thesis/taxonomy_analysis.ltx
@@ -88,22 +88,26 @@ Following, the set of relevant classes, which are of interest to human editors, 
 \newpage
 \begin{figure}[H]
 \centering
-\includegraphics[width=0.8\textwidth]{images/taxonomy_analysis/class_instance_counts.png}
-\caption{Percentage of all classes with a specific amount of instances. Wikidata (\dumpdate{})}
+\includegraphics[width=0.75\textwidth]{images/taxonomy_analysis/class_instance_counts.png}
+\caption{Percentage of all classes with specific amount of instances (\dumpdate{}).}
 \label{fig:all instance count}
-
-\includegraphics[width=0.8\textwidth]{images/taxonomy_analysis/class_subclass_counts.png}
-\caption{Percentage of all classes with a specific amount of subclasses. Wikidata (\dumpdate{})}
+\end{figure}
+\begin{figure}[H]
+\centering
+\includegraphics[width=0.75\textwidth]{images/taxonomy_analysis/class_subclass_counts.png}
+\caption{Percentage of all classes with specific amount of subclasses (\dumpdate{}).}
 \label{fig:all subclass count}
 \end{figure}
 \begin{figure}[H]
 \centering
-\includegraphics[width=0.8\textwidth]{images/taxonomy_analysis/class_property_counts.png}
-\caption{Percentage of all classes with a specific amount of unique properties. Wikidata (\dumpdate{})}
+\includegraphics[width=0.75\textwidth]{images/taxonomy_analysis/class_property_counts.png}
+\caption{Percentage of all classes with specific amount of unique properties (\dumpdate{}).}
 \label{fig:all property count}
-
-\includegraphics[width=0.8\textwidth]{images/taxonomy_analysis/class_property_frequency.png}
-\caption{Frequency of properties in all classes. Wikidata (\dumpdate{})}
+\end{figure}
+\begin{figure}[H]
+\centering
+\includegraphics[width=0.85\textwidth]{images/taxonomy_analysis/class_property_frequency.png}
+\caption{Frequency of properties in all classes (\dumpdate{}).}
 \label{fig:all property frequency}
 \end{figure}
 
@@ -163,25 +167,28 @@ The property frequency shows that classes concerned with countries (\textit{coun
 But even the most common topic related properties occur with a frequency of less than $30\%$, therefore it is concluded that the data is not biased to a certain topic,
 as it was for the set of all classes.
 As a result, the hybrid algorithm will be developed and evaluated in regards to relevant classes rather than all classes.
-\newpage
 \begin{figure}[H]
 \centering
-\includegraphics[width=0.8\textwidth]{images/taxonomy_analysis/relevant_class_instance_counts.png}
-\caption{Percentage of relevant classes with a specific amount of instances. Wikidata (\dumpdate{})}
+\includegraphics[width=0.75\textwidth]{images/taxonomy_analysis/relevant_class_instance_counts.png}
+\caption{Percentage of relevant classes with specific amount of instances (\dumpdate{}).}
 \label{fig:relevant instance count}
-
-\includegraphics[width=0.8\textwidth]{images/taxonomy_analysis/relevant_class_subclass_counts.png}
-\caption{Percentage of relevant classes with a specific amount of subclasses. Wikidata (\dumpdate{})}
+\end{figure}
+\begin{figure}[H]
+\centering
+\includegraphics[width=0.75\textwidth]{images/taxonomy_analysis/relevant_class_subclass_counts.png}
+\caption{Percentage of relevant classes with specific amount of subclasses (\dumpdate{}).}
 \label{fig:relevant subclass count}
 \end{figure}
 \begin{figure}[H]
 \centering
-\includegraphics[width=0.8\textwidth]{images/taxonomy_analysis/relevant_class_property_counts.png}
-\caption{Percentage of relevant classes with a specific amount of unique properties. Wikidata (\dumpdate{})}
+\includegraphics[width=0.75\textwidth]{images/taxonomy_analysis/relevant_class_property_counts.png}
+\caption{Percentage of relevant classes with specific amount of unique properties (\dumpdate{}).}
 \label{fig:relevant property count}
-
-\includegraphics[width=0.8\textwidth]{images/taxonomy_analysis/relevant_class_property_frequency.png}
-\caption{Frequency of properties in relevant classes. Wikidata (\dumpdate{})}
+\end{figure}
+\begin{figure}[H]
+\centering
+\includegraphics[width=0.85\textwidth]{images/taxonomy_analysis/relevant_class_property_frequency.png}
+\caption{Frequency of properties in relevant classes (\dumpdate{}).}
 \label{fig:relevant property frequency}
 \end{figure}
 
@@ -218,22 +225,22 @@ Therefore, it can be concluded that the set of relevant classes should be adequa
  
 \begin{figure}[H]
 \centering
-\includegraphics[width=0.8\textwidth]{images/taxonomy_analysis/orphan_class_instance_counts.png}
-\caption{Percentage of orphan classes with a specific amount of instances. Wikidata (\dumpdate{})}
+\includegraphics[width=0.75\textwidth]{images/taxonomy_analysis/orphan_class_instance_counts.png}
+\caption{Percentage of orphan classes with a specific amount of instances (\dumpdate{}).}
 \label{fig:orphan instance count}
 
-\includegraphics[width=0.8\textwidth]{images/taxonomy_analysis/orphan_class_subclass_counts.png}
-\caption{Percentage of orphan classes with a specific amount of subclasses. Wikidata (\dumpdate{})}
+\includegraphics[width=0.75\textwidth]{images/taxonomy_analysis/orphan_class_subclass_counts.png}
+\caption{Percentage of orphan classes with a specific amount of subclasses (\dumpdate{}).}
 \label{fig:orphan subclass count}
 \end{figure}
 \begin{figure}[H]
 \centering
-\includegraphics[width=0.8\textwidth]{images/taxonomy_analysis/orphan_class_property_counts.png}
-\caption{Percentage of orphan classes with a specific amount of unique properties. Wikidata (\dumpdate{})}
+\includegraphics[width=0.75\textwidth]{images/taxonomy_analysis/orphan_class_property_counts.png}
+\caption{Percentage of orphan classes with a specific amount of unique properties (\dumpdate{}).}
 \label{fig:orphan property count}
 
-\includegraphics[width=0.8\textwidth]{images/taxonomy_analysis/orphan_class_property_frequency.png}
-\caption{Frequency of properties in orphan classes. Wikidata (\dumpdate{})}
+\includegraphics[width=0.85\textwidth]{images/taxonomy_analysis/orphan_class_property_frequency.png}
+\caption{Frequency of properties in orphan classes (\dumpdate{}).}
 \label{fig:orphan property frequency}
 \end{figure}
 
