Fixed ref error in Chapter "Ontology learning"

--- a/thesis/ontology_learning.ltx
+++ b/thesis/ontology_learning.ltx
@@ -133,7 +133,7 @@ on  $15247$ hypernym-hyponym word pairs. The approach achieves an F-score of $73
 and outperforms existing state-of-the-art methods.
 
 As argued in Chapter~\ref{section:neural networks}, the use of neural word embeddings seems promising, which is supported by the good results of \citeauthor{Fu2014}'s work.
-A similar approach, which is presented in Chapter~\ref{section:hybrid algorithm}, can be applied in the given task.
+A similar approach, which is presented in Chapter~\ref{section:algorithm}, can be applied in the given task.
 The main difference in the problems is the expected input, which is one of the reasons why \fullcite{Fu2014}'s approach works so well.
 \citeauthor{Fu2014} assumes that a subclass and its superclasses are given as input.
 This is advantageous for multiple reasons.
