Added missing reference to chapter "Hybrid algorithm"

--- a/thesis/algorithm.ltx
+++ b/thesis/algorithm.ltx
@@ -68,7 +68,7 @@ Wikidata IDs. In this work, the input for SequenceGen is a Wikidata JSON dump \c
 as it directly uses Wikidata IDs and is structured data, therefore easy to automatically process.
 It is possible to use other knowledge bases as input, if a mapping to Wikidata can be found.
 For example, an incomplete mapping between Wikidata and DBpedia exists in DBpedia
-via the \textit{owl:equivalentProperty} and \textit{owl:equivalentClass} properties \textbf{TODO: reference}.
+via the \textit{owl:equivalentProperty} and \textit{owl:equivalentClass} properties \cite{Ismayilov2017}.
 
 \subsubsection{Triple sentences}\label{section:triple sentences}
 Triple sentences uses Wikidata as input data set.
