--- a/thesis/bibliography.bib
+++ b/thesis/bibliography.bib
@@ -825,3 +825,17 @@ author  = {Maithra Raghu and Ben Poole and Jon Kleinberg and Surya Ganguli and J
 year  = 2017,
 URL = {https://arxiv.org/pdf/1606.05336.pdf}
 }
+@article{Ismayilov2017,
+  added-at = {2017-05-22T09:59:50.000+0200},
+  author = {Ismayilov, Ali and Kontokostas, Dimitris and Auer, S{\"o}ren and Lehmann, Jens and Hellmann, Sebastian},
+  biburl = {https://www.bibsonomy.org/bibtex/2c600e16f7d96242ee117de4401ba9077/aksw},
+  doi = {10.3233/SW-170277},
+  interhash = {97ae8b1e6638f4da8f6697a9bfe65517},
+  intrahash = {c600e16f7d96242ee117de4401ba9077},
+  journal = {Semantic Web Journal},
+  keywords = {2017 MOLE group_aksw lehmann},
+  pages = {1-11},
+  timestamp = {2017-05-22T09:59:50.000+0200},
+  title = {Wikidata through the Eyes of DBpedia},
+  year = 2017
+}
